feat: implement resolution entity timeseries